@startuml
'https://plantuml.com/class-diagram

hide circle
hide methods


class User{
+userName
+password
+email

}

class Profile{
+fullName
+phoneNumber
+address
+hobby
}

class Hobby{
+hobbyName
+hobbyDescription
}

class Address{
+cityName
+postCode
}

Profile"1"--"1"User
Profile "*"--"*"Hobby
Address"1"--"*" Profile




@enduml